# smallop

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
scripts/: example.py
smallop/: tensor.py
